--- a/CarRental/src/main/resources/application.properties
+++ b/CarRental/src/main/resources/application.properties
@@ -9,9 +9,9 @@ upload.iccard-dir=uploads/iccard/
 upload.before-dir=uploads/rental_before/
 upload.after-dir=uploads/rental_after/
 
-# SePay (thêm thông tin thực tế sau)
-sepay.merchantId=
-sepay.secretKey=
+# SePay
+sepay.merchantId=SP-LIVE-NT828A73
+sepay.secretKey=spsk_live_17HH59B97Kba4Sjiv7g3PQMgMQnMmVWw
 sepay.endpoint=https://api.sepay.vn/payment
 
 # Upload size limits
