Integrate SePay QR payments

--- a/CarRental/src/main/resources/application.properties
+++ b/CarRental/src/main/resources/application.properties
@@ -9,10 +9,12 @@ upload.iccard-dir=uploads/iccard/
 upload.before-dir=uploads/rental_before/
 upload.after-dir=uploads/rental_after/
 
-# SePay
-sepay.merchantId=SP-LIVE-NT828A73
-sepay.secretKey=spsk_live_17HH59B97Kba4Sjiv7g3PQMgMQnMmVWw
-sepay.endpoint=https://api.sepay.vn/payment
+# SePay API
+sepay.api-key=YOUR_SEPAY_API_KEY
+sepay.account-number=123456789
+sepay.account-name=TEN_CHU_TAI_KHOAN
+sepay.bank-name=Ngan hang
+sepay.endpoint=https://api.sepay.vn/v1/transactions/generate
 
 # Upload size limits
 spring.servlet.multipart.enabled=true
