Configure SePay production credentials

--- a/CarRental/src/main/resources/application.properties
+++ b/CarRental/src/main/resources/application.properties
@@ -9,9 +9,9 @@ upload.iccard-dir=uploads/iccard/
 upload.before-dir=uploads/rental_before/
 upload.after-dir=uploads/rental_after/
 
-# SePay API
-sepay.api-key=YOUR_SEPAY_API_KEY
-sepay.account-number=123456789
+# SePay API (production credentials)
+sepay.api-key=spsk_live_17HH59B97Kba4Sjiv7g3PQMgMQnMmVWw
+sepay.account-number=SP-LIVE-NT828A73
 sepay.account-name=TEN_CHU_TAI_KHOAN
 sepay.bank-name=Ngan hang
 sepay.endpoint=https://api.sepay.vn/v1/transactions/generate
