--- a/CarRental/src/main/resources/application.properties
+++ b/CarRental/src/main/resources/application.properties
@@ -9,14 +9,15 @@ upload.iccard-dir=uploads/iccard/
 upload.before-dir=uploads/rental_before/
 upload.after-dir=uploads/rental_after/
 
-# SePay API (production credentials)
-sepay.api-key=spsk_live_17HH59B97Kba4Sjiv7g3PQMgMQnMmVWw
-sepay.account-number=SP-LIVE-NT828A73
-sepay.account-name=TEN_CHU_TAI_KHOAN
-sepay.bank-name=Ngan hang
-sepay.endpoint=https://api.sepay.vn/v1/transactions/generate
-
 # Upload size limits
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
+
+# SePay API
+sepay.base-url=https://api.sepay.vn
+sepay.merchant-code=SP-LIVE-NT828A73
+sepay.api-key=spsk_live_17HH59B97Kba4Sjiv7g3PQMgMQnMmVWw
+sepay.account-number=NGO TRUONG TIN
+sepay.callback-url= https://willfully-nonarsenic-halina.ngrok-free.dev
+sepay.currency=VND
