--- a/CarRental/src/main/resources/application.properties
+++ b/CarRental/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 # MongoDB Atlas
 spring.data.mongodb.uri=mongodb+srv://ngotruongtin0111_db_user:chotien22@cluster0.b4qjzp9.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=carrental
+spring.data.mongodb.socket-timeout=20000
+spring.data.mongodb.connect-timeout=20000
+spring.data.mongodb.server-selection-timeout=30000
 
 # File upload
 upload.base-dir=uploads/
@@ -15,9 +18,12 @@ spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
 # SePay API
-sepay.base-url=https://api.sepay.vn
 sepay.merchant-code=SP-LIVE-NT828A73
 sepay.api-key=spsk_live_17HH59B97Kba4Sjiv7g3PQMgMQnMmVWw
-sepay.account-number=NGO TRUONG TIN
-sepay.callback-url= https://willfully-nonarsenic-halina.ngrok-free.dev
-sepay.currency=VND
+sepay.secret-key=spsk_live_17HH59B97Kba4Sjiv7g3PQMgMQnMmVWw
+sepay.account-number=0915907623
+sepay.bank-name=MBBANK
+sepay.account-name=NGO TRUONG TIN
+
+# CALLBACK WEBHOOK
+sepay.callback-url=https://willfully-nonarsenic-halina.ngrok-free.dev/payment/webhook
