Handle cash payment holds and HTTPS redirects

--- a/CarRental/src/main/resources/application.properties
+++ b/CarRental/src/main/resources/application.properties
@@ -27,3 +27,7 @@ sepay.account-name=NGO TRUONG TIN
 
 # CALLBACK WEBHOOK
 sepay.callback-url=https://willfully-nonarsenic-halina.ngrok-free.dev/payment/webhook
+
+# Respect reverse proxy protocol to avoid mixed content on redirects
+server.forward-headers-strategy=framework
+server.use-forward-headers=true
