--- a/CarRental/src/main/resources/application.properties
+++ b/CarRental/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 # MySQL Database Configuration
-# SECURITY NOTE: For production, set password via environment variable:
-# spring.datasource.password=${DB_PASSWORD}
 spring.datasource.url=jdbc:mysql://localhost:3306/carrental?createDatabaseIfNotExist=true&useSSL=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=chotien22
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
